Add Servo talk by Jack Moffitt to the website

--- a/index.html
+++ b/index.html
@@ -172,78 +172,21 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Talks</h2>
-                    <h3 class="section-subheading text-muted">From 2015 edition.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#talkModalMichael" class="portfolio-link" data-toggle="modal">
+                    <a href="#talkModalJack" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="2015/img/talks/https-achievements-and-challenges-by-michael-catanzaro.jpg" class="img-responsive" alt="Michael Catanzaro talking about HTTPS">
+                        <img src="img/talks/servo-today-and-tomorrow-by-jack-moffitt.jpg" class="img-responsive" alt="Jack Moffitt talking about Servo">
                     </a>
                     <div class="portfolio-caption">
-                        <h4><a href="#talkModalMichael" class="portfolio-link" data-toggle="modal">HTTPS Achievements and Challenges</a></h4>
-                        <p class="text-muted">by Michael Catanzaro</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="2015/img/talks/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.jpg" class="img-responsive" alt="Gustavo Noronha talking about WebKit Clutter">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4><a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">Going upstream: the future (or lack thereof) of WebKit Clutter</a></h4>
-                        <p class="text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#talkModalDominik" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="2015/img/talks/recent-blink-improvements-in-text-and-layout-by-dominik-rottsches.jpg" class="img-responsive" alt="Dominik Röttsches talking about Text Layout">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4><a href="#talkModalDominik" class="portfolio-link" data-toggle="modal">Recent Blink improvements in Text &amp; Layout</a></h4>
-                        <p class="text-muted">by Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#talkModalCalvarisYouenn" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="2015/img/talks/streams-api-and-you-by-xabier-rodriguez-calvar-and-youenn-fablet.jpg" class="img-responsive" alt="Calvaris &amp; Youenn talking about Streams API">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4><a href="#talkModalCalvarisYouenn" class="portfolio-link" data-toggle="modal">Streams API and you</a></h4>
-                        <p class="text-muted">by Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris"><i class="fa fa-twitter"></i></a><br>&amp; Youenn Fablet</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#talkModalFred" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="2015/img/talks/mathml-in-web-engines-by-frederic-wang.jpg" class="img-responsive" alt="Frédéric talking about MathML">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4><a href="#talkModalFred" class="portfolio-link" data-toggle="modal">MathML in Web Engines</a></h4>
-                        <p class="text-muted">by Frédéric Wang</p>
+                        <h4><a href="#talkModalJack" class="portfolio-link" data-toggle="modal">Servo: Today & Tomorrow</a></h4>
+                        <p class="text-muted">by Jack Moffitt</p>
                     </div>
                 </div>
 			</div>
@@ -541,8 +484,8 @@
 
     <!-- Talks Modals -->
 
-    <!-- Michael talk -->
-    <div class="portfolio-modal modal fade" id="talkModalMichael" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Jack talk -->
+    <div class="portfolio-modal modal fade" id="talkModalJack" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -554,139 +497,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-							<h2>HTTPS Achievements and Challenges</h2>
-							<p class="item-intro text-muted">by Michael Catanzaro</p>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/CtxPEoZ-6lU?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
+							<h2>Servo: Today & Tomorrow</h2>
+							<p class="item-intro text-muted">by Jack Moffitt</p>
                             <ul class="list-inline">
-                                <li>Video: <a href="https://youtu.be/CtxPEoZ-6lU?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
-                                <li>Slides: <a href="http://www.webengineshackfest.org/2015/slides/https-achievements-and-challenges-by-michael-catanzaro.pdf">PDF</a></li>
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/servo-today-and-tomorrow-by-jack-moffitt.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
-                                <li>Date: Monday 7th December 2015</li>
-                                <li>Time: 15:00</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Gustavo talk -->
-    <div class="portfolio-modal modal fade" id="talkModalGustavo" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-							<h2>Going upstream: the future (or lack thereof) of WebKit Clutter</h2>
-							<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/zn-FWJF8A5Y?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
-                            <ul class="list-inline">
-                                <li>Video: <a href="https://youtu.be/zn-FWJF8A5Y?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
-                                <li>Slides: <a href="http://www.webengineshackfest.org/2015/slides/going-upstream-the-future-or-lack-thereof-of-webkit-clutter-by-gustavo-noronha.pdf">PDF</a></li>
-                            </ul>
-                            <ul class="list-inline">
-                                <li>Date: Tuesday 8th December 2015</li>
-                                <li>Time: 10:00</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Dominik talk -->
-    <div class="portfolio-modal modal fade" id="talkModalDominik" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-							<h2>Recent Blink improvements in Text &amp; Layout</h2>
-							<p class="item-intro text-muted">by Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></p>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/Plhnr7mPhxw?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
-                            <ul class="list-inline">
-                                <li>Video: <a href="https://youtu.be/Plhnr7mPhxw?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
-                                <li>Slides: <a href="http://www.webengineshackfest.org/2015/slides/recent-blink-improvements-in-text-and-layout-by-dominik-rottsches.pdf">PDF</a></li>
-                            </ul>
-                            <ul class="list-inline">
-                                <li>Date: Tuesday 8th December 2015</li>
-                                <li>Time: 15:00</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- CalvarisYouenn talk -->
-    <div class="portfolio-modal modal fade" id="talkModalCalvarisYouenn" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-							<h2>Streams API and you</h2>
-							<p class="item-intro text-muted">by Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris"><i class="fa fa-twitter"></i></a><br>&amp; Youenn Fablet</p>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/O94an4pZfb4?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
-                            <ul class="list-inline">
-                                <li>Video: <a href="https://youtu.be/O94an4pZfb4?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
-                                <li>Slides: <a href="http://www.webengineshackfest.org/2015/slides/streams-api-and-you-by-xabier-rodriguez-calvar-and-youenn-fablet.pdf">PDF</a></li>
-                            </ul>
-                            <ul class="list-inline">
-                                <li>Date: Wednesday 9th December 2015</li>
-                                <li>Time: 10:00</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Fred talk -->
-    <div class="portfolio-modal modal fade" id="talkModalFred" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-							<h2>MathML in Web Engines</h2>
-							<p class="item-intro text-muted">by Frédéric Wang</p>
-                            <iframe width="640" height="360" src="https://www.youtube.com/embed/1KfmYqKN9Tg?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
-                            <ul class="list-inline">
-                                <li>Video: <a href="https://youtu.be/1KfmYqKN9Tg?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
-                                <li>Slides: <a href="http://www.webengineshackfest.org/2015/slides/mathml-in-web-engines-by-frederic-wang/mathml/">HTML</a></li>
-                            </ul>
-                            <ul class="list-inline">
-                                <li>Date: Wednesday 9th December 2015</li>
+                                <li>Date: Monday 26th September 2016</li>
                                 <li>Time: 15:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
