Add Behdad Esfahbod talk about HarfBuzz

--- a/index.html
+++ b/index.html
@@ -189,6 +189,20 @@
                         <p class="text-muted">by Jack Moffitt</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalBehdad" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/ten-years-of-harfbuzz-by-behdad-esfahbod.jpg" class="img-responsive" alt="Behdad Esfahbod talking about HarfBuzz">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalBehdad" class="portfolio-link" data-toggle="modal">Ten Years of HarfBuzz</a></h4>
+                        <p class="text-muted">by Behdad Esfahbod</p>
+                    </div>
+                </div>
 			</div>
         </div>
     </section>
@@ -505,6 +519,36 @@
                             <ul class="list-inline">
                                 <li>Date: Monday 26th September 2016</li>
                                 <li>Time: 15:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Behdad talk -->
+    <div class="portfolio-modal modal fade" id="talkModalBehdad" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>Ten Years of HarfBuzz</h2>
+							<p class="item-intro text-muted">by Behdad Esfahbod</p>
+                            <ul class="list-inline">
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/ten-years-of-harfbuzz-by-behdad-esfahbod.pdf">PDF</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Tuesday 27th September 2016</li>
+                                <li>Time: 10:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
                         </div>
