Add Zan talk about WPE

--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
                         <p class="text-muted">by Youenn Fablet</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalZan" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/from-webkit-for-wayland-to-wpe-zan-dobersek.jpg" class="img-responsive" alt="Žan Doberšek talking about WPE">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalZan" class="portfolio-link" data-toggle="modal">From "WebKit for Wayland" to WPE</a></h4>
+                        <p class="text-muted">by Žan Doberšek</p>
+                    </div>
+                </div>
 			</div>
         </div>
     </section>
@@ -589,6 +603,36 @@
 							<p class="item-intro text-muted">by Youenn Fablet</p>
                             <ul class="list-inline">
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/fetching-bytes-and-words-on-the-web-by-youenn-fablet/">HTML</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Tuesday 27th September 2016</li>
+                                <li>Time: 15:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Zan talk -->
+    <div class="portfolio-modal modal fade" id="talkModalZan" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>From "WebKit for Wayland" to WPE</h2>
+							<p class="item-intro text-muted">by Žan Doberšek</p>
+                            <ul class="list-inline">
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/from-webkit-for-wayland-to-wpe-zan-dobersek.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
                                 <li>Date: Tuesday 27th September 2016</li>
