Adding Gustavo talk about Clutter WebKitGTK+

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4><a href="#talkModalJack" class="portfolio-link" data-toggle="modal">Servo: Today & Tomorrow</a></h4>
-                        <p class="text-muted">by Jack Moffitt</p>
+                        <p class="text-muted">by Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -200,7 +200,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4><a href="#talkModalBehdad" class="portfolio-link" data-toggle="modal">Ten Years of HarfBuzz</a></h4>
-                        <p class="text-muted">by Behdad Esfahbod</p>
+                        <p class="text-muted">by Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -228,9 +228,22 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4><a href="#talkModalZan" class="portfolio-link" data-toggle="modal">From "WebKit for Wayland" to WPE</a></h4>
-                        <p class="text-muted">by Žan Doberšek</p>
+                        <p class="text-muted">by Žan Doberšek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/cluttering-webkitgtk-by-gustavo-noronha.jpg" class="img-responsive" alt="Gustavo Noronha talking about Cluter WebKitGTK+">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalGustavo" class="portfolio-link" data-toggle="modal">Cluttering WebKitGTK+</a></h4>
+                        <p class="text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                    </div>
 			</div>
         </div>
     </section>
@@ -540,7 +553,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
 							<h2>Servo: Today & Tomorrow</h2>
-							<p class="item-intro text-muted">by Jack Moffitt</p>
+							<p class="item-intro text-muted">by Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></p>
                             <ul class="list-inline">
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/servo-today-and-tomorrow-by-jack-moffitt.pdf">PDF</a></li>
                             </ul>
@@ -570,7 +583,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
 							<h2>Ten Years of HarfBuzz</h2>
-							<p class="item-intro text-muted">by Behdad Esfahbod</p>
+							<p class="item-intro text-muted">by Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></p>
                             <ul class="list-inline">
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/ten-years-of-harfbuzz-by-behdad-esfahbod.pdf">PDF</a></li>
                             </ul>
@@ -630,12 +643,41 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
 							<h2>From "WebKit for Wayland" to WPE</h2>
-							<p class="item-intro text-muted">by Žan Doberšek</p>
+							<p class="item-intro text-muted">by Žan Doberšek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></p>
                             <ul class="list-inline">
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/from-webkit-for-wayland-to-wpe-zan-dobersek.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
-                                <li>Date: Tuesday 27th September 2016</li>
+                                <li>Date: Wednesday 28th September 2016</li>
+                                <li>Time: 10:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Gustavo talk -->
+    <div class="portfolio-modal modal fade" id="talkModalGustavo" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>Cluttering WebKitGTK+</h2>
+							<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                            <ul class="list-inline">
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/cluttering-webkitgtk-by-gustavo-noronha.pdf">PDF</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Wednesday 28th September 2016</li>
                                 <li>Time: 15:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
