--- a/index.html
+++ b/index.html
@@ -554,7 +554,9 @@
                         <div class="modal-body">
 							<h2>Servo: Today & Tomorrow</h2>
 							<p class="item-intro text-muted">by Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/UGl9VVIOo3E?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/UGl9VVIOo3E?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/servo-today-and-tomorrow-by-jack-moffitt.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
