--- a/index.html
+++ b/index.html
@@ -586,7 +586,9 @@
                         <div class="modal-body">
 							<h2>Ten Years of HarfBuzz</h2>
 							<p class="item-intro text-muted">by Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/T79LMEXkf9w?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/T79LMEXkf9w?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/ten-years-of-harfbuzz-by-behdad-esfahbod.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
