Publish Fetch API talk

--- a/index.html
+++ b/index.html
@@ -618,7 +618,9 @@
                         <div class="modal-body">
 							<h2>Fetching Bytes and Words on the Web</h2>
 							<p class="item-intro text-muted">by Youenn Fablet</p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/hJoxO4_fwWY?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/hJoxO4_fwWY?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/fetching-bytes-and-words-on-the-web-by-youenn-fablet/">HTML</a></li>
                             </ul>
                             <ul class="list-inline">
