Publish WPE talk

--- a/index.html
+++ b/index.html
@@ -650,7 +650,9 @@
                         <div class="modal-body">
 							<h2>From "WebKit for Wayland" to WPE</h2>
 							<p class="item-intro text-muted">by Žan Doberšek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/LI8jQEcFsbk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/LI8jQEcFsbk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/from-webkit-for-wayland-to-wpe-zan-dobersek.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
