Publishing Cluttering WebKitGTK+ talk

--- a/index.html
+++ b/index.html
@@ -681,7 +681,9 @@
                         <div class="modal-body">
 							<h2>Cluttering WebKitGTK+</h2>
 							<p class="item-intro text-muted">by Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/PKVFwxbtAOk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF" frameborder="0" allowfullscreen></iframe>
                             <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/PKVFwxbtAOk?list=PL4sEzdAGvRgCYXot-o5cVKOobIXZI5iLF">YouTube</a></li>
                                 <li>Slides: <a href="http://www.webengineshackfest.org/slides/cluttering-webkitgtk-by-gustavo-noronha.pdf">PDF</a></li>
                             </ul>
                             <ul class="list-inline">
