Update hotel information

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
                         <i class="fa fa-h-square fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Accommodation</h4>
-                    <p class="text-muted text-left">We recommend staying in <a href="http://www.hotelavenida.com/">Hotel Avenida</a>, which is a <a href="https://graphhopper.com/maps/?point=43.351529%2C-8.407942&amp;point=43.346286%2C-8.409444&amp;vehicle=foot&amp;elevation=true&amp;layer=Lyrk">five minute walk from the Igalia office</a> and offers very reasonable rates.</p>
-                    <p class="text-muted text-left">We are happy to help book your reservation at the hotel and pair you up in a double-room to save money. Just let us know when confirming your attendance.</p>
+                    <p class="text-muted text-left">We recommend staying in <a href="http://www.hotelavenida.com/">Hotel Avenida</a>, which is a <a href="https://graphhopper.com/maps/?point=43.351529%2C-8.407942&amp;point=43.346286%2C-8.409444&amp;vehicle=foot&amp;elevation=true&amp;layer=Lyrk">five minute walk from Igalia's office</a> and is offering a discounted rate for hackfest attendees.</p>
+                    <p class="text-muted text-left">If you would like us to book your reservation at the Avenida, please let us know the room size (single or double) and name(s) under which we should book the room. If you would prefer to book your own reservation at the Avenida, be sure to mention Igalia in order to get the event rate.</p>
                 </div>
             </div>
         </div>
