--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
                 </div>
             </div>
             <div class="row text-center sponsors">
+                <a href="https://www.collabora.com">
+                    <img src="img/logos/logo-collabora.png" title="Collabora" alt="Collabora Logo">
+                </a>
                 <a href="https://www.igalia.com">
                     <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
                 </a>
