Update website topics

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hacking oriented invitation-only event. Involving members from all parts of the Open Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.">
-    <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, open web platform, open web hackfest, chromium hackfest, blink Hackfest, safari hackfest, webkit hackfest, firefox hackfest, gecko hackfest, servo hackfest, chromium, blink, safari, webkit, firefox, gecko, servo">
+    <meta name="description" content="Hacking oriented invitation-only event. Involving members from all parts of the Open Web Platform community, including those who work on Chromium/Blink, WebKit, Firefox/Gecko, and Servo.">
+    <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, open web platform, open web hackfest, chromium hackfest, blink hackfest, safari hackfest, webkit hackfest, firefox hackfest, gecko hackfest, servo hackfest, chromium, blink, safari, webkit, firefox, gecko, servo">
     <meta name="author" content="Igalia">
 
     <title>2017 Web Engines Hackfest</title>
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
-                                    <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
+                                    <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Chromium/Blink, WebKit, Firefox/Gecko and Servo.</p>
                                 </div>
                             </div>
                         </li>
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">The event has an <strong>unconference format</strong> and the first step is the creation of small focused teams. Attendees should feel free to propose any topic which interests them.</p>
-                                    <p class="text-muted">Past year topics of interest included: WebKit Ports (WebKitGTK+, WebKitEFL and WebKit for Wayland), Multimedia, Media Source, Streams API, Layout, MathML, Graphics, Fonts, Servo, Epiphany.</p>
+                                    <p class="text-muted">Some topics of interest for this year edition: WebKit Ports (WebKitGTK+ and WPE), Chromium (Servicification and Mus/Ozone/Wayland), JavaScript (V8, JSC and SpiderMonkey), Web Predictability and Compatibility, Multimedia, Media Source, WebRTC, Layout, MathML, Graphics, Fonts, Accessibility, WebVR, Servo, Epiphany.</p>
                                     <p class="text-muted">In addition, you can <a href="#portfolio">watch the talks from past edition on this website</a>.</p>
                                 </div>
                             </div>
