--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="section-heading">Venue</h2>
                     <p>
-                        <iframe src="http://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="width: 100%; height: 400px; border: 1px solid black"></iframe>
+                        <iframe src="https://www.openstreetmap.org/export/embed.html?bbox=-8.41326355934143%2C43.34453079897872%2C-8.405592441558838%2C43.34787795067693&amp;layer=mapnik&amp;marker=43.346204397898134%2C-8.409428000450134" style="width: 100%; height: 400px; border: 1px solid black"></iframe>
                         <br>
-                        <small><a href="http://www.openstreetmap.org/?mlat=43.34620&amp;mlon=-8.40943#map=18/43.34620/-8.40943&amp;layers=N">OpenStreetMap Page</a></small>
+                        <small><a href="https://www.openstreetmap.org/?mlat=43.34620&amp;mlon=-8.40943#map=18/43.34620/-8.40943&amp;layers=N">OpenStreetMap Page</a></small>
                     </p>
                     <h3 class="section-subheading text-muted"><strong>Igalia Headquarters</strong><br>Bugallal Marchesi 22, 1º<br>15008, A Coruña<br>Galicia (Spain)</h3>
                 </div>
@@ -637,7 +637,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
