--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
                 <a href="https://www.collabora.com">
                     <img src="img/logos/logo-collabora.png" title="Collabora" alt="Collabora Logo">
                 </a>
+                <a href="https://www.google.com">
+                    <img src="img/logos/logo-google.png" title="Google" alt="Google Logo">
+                </a>
                 <a href="https://www.igalia.com">
                     <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
                 </a>
